# xwg

./: .gitignore  .gitignore.swp  CMakeLists.txt  Makefile  README.md  a1.cpp  xor-new.cpp
